--- a/Projet_Bergeret/src/main/resources/application.properties
+++ b/Projet_Bergeret/src/main/resources/application.properties
@@ -1,20 +1,16 @@
 # DATABASE
-
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/j2e_db
+spring.datasource.username=admin
+spring.datasource.password=admin
 spring.sql.init.mode=always
 
 # JPA / HIBERNATE
-
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate5.SpringSessionContext
-spring.web.resources.add-mappings=true
-# Fix Postgres JPA Error:
-# Method org.postgresql.jdbc.PgConnection.createClob() is not yet implemented.
-spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 
 server.port=8080
